changed body min-width to fix whitespace on right side

--- a/styles/main.less
+++ b/styles/main.less
@@ -216,15 +216,14 @@
   margin-right: 30px;
 }
 
-@media screen and (max-width: 450px) {
-  .logo-gc {
-    display: none;
-  }
-}
-
 .hero {
   height: 40px;
   width: 100%;
+}
+
+
+body {
+  min-width: 470px;
 }
 
 // End structure
